--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,80 +1,96 @@
 *{
-    margin: 0; padding: 0; box-sizing: border-box;
-    font-family: sans-serif;
-}
-body{
-    background: url(fondo1.jpg);
-}
-.contenedor{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-.contenedor figure{
-    position: relative;
-    height: 300px;
-    width: 300px;
-    overflow: hidden;
-    border-radius: 6px;
-    box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
-    cursor: pointer;
-    clear: both;
-}
-.contenedor figure img{
-    width: 100%;
-    height: 100%;
-    transition: all 500ms ease-out;
-}
-.contenedor figure .capa{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(11, 103, 123, 0.6);
-    transition: all 500ms ease-out;
-    opacity: 0;
-    visibility: hidden;
-    text-align: center;
-}
-.contenedor figure:hover > .capa{
-    opacity: 1;
-    visibility: visible;
-}
-.contenedor figure:hover > .capa h3{
-    margin-top: 50px;
-    margin-bottom: 15px;
-}
-.contenedor figure:hover img{
-    transform: scale(1.3);
-}
-.contenedor figure .capa h3{
-    color: #fff;
-    font-size: 30PX;
-    font-weight: 400;
-    margin-bottom: 120px;
-    transition: all 500ms ease-out;
-    margin-top: 30px;
-}
-.contenedor figure .capa p{
-    color: #fff;
-    font-size: 15px;
-    line-height: 1.5;
-    width: 100%;
-    max-width: 220px;
-    margin: auto;
-}
-.contenedor figure .capa a{
-    color: #fff;
-    font-size: 15px;
-    line-height: 1.5;
-    width: 100%;
-    max-width: 220px;
-    margin: auto;
+    margin: 0;
+    padding: 0;
     text-decoration: none;
+    box-sizing: border-box;
 }
-.contenedor figure .capa a:hover{
-    color: black;
-    font-size: 20px;
+ul{
+    list-style: none;
 }
+.navbar-style{
+    display: flex;
+    padding: 10px;
+    background-color: black;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+.navbar-a{
+    font-family: "Montserrat", sans-serif;
+    color: #fff;
+    margin: 0em 0.3em;
+    padding: 5px 10px;
+    transition: all 0.5s;
+    text-transform: uppercase;
+}
+.navbar-a:hover {
+    color: #fff;
+    border-radius: 0.2em;
+    background-color:rgba(255, 255, 255, 0.30);
+    border-left: 0.1em solid #fff;
+    padding: 0em 0.2em;
+}
+.navbar-submenu{
+    display: none;
+    position: relative;
+    background-color: black;
+}
+.nav li:hover > ul{
+    display: block;
+}
+.navbar-suba{
+    font-family: "Montserrat", sans-serif;
+    color: #fff;
+    font-size: .9rem;
+    text-decoration: none;
+    margin: 0.1em 0;
+    padding: 5px 5px 5px 0;
+    transition: all 0.5s;
+    text-transform: uppercase;
+}
+.navbar-suba:hover{
+    color: #fff;
+    background-color:rgba(255, 255, 255, 0.30);
+    border-radius: 0.2em;
+    border-left: 0.1em solid #fff;
+    padding: 0em 0.5em;
+}
+
+/* COMIENZO-MAIN */
+
+.oracion_testimonio{
+    padding: .3em;
+    margin: 1em;
+    text-transform: uppercase;
+    backdrop-filter: blur(1rem);
+    box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, .3);
+}
+.enlace_temtes{
+    text-decoration: none;
+    color: #fff;
+    font-size: 1rem;
+    padding: 0 .8em;
+    background-color: rgb(40, 122, 189);
+    border: none;
+    border-radius: 5em;
+}
+.enlace_temtes:hover{
+    color:  rgb(40, 122, 189);
+    background-color: #fff;
+    border: solid .2em  rgb(40, 122, 189);
+}
+
+.navbar_h1{
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.5rem;
+    margin-left: .5em;
+}
+.color-iconbar {
+    background-color: #fff;
+  }
+
+.navheader_logo{
+    width: 2em;
+}
+
