--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,7 @@
 }
 ul{
     list-style: none;
+    transition: all 2s ease;
 }
 .navbar-style{
     display: flex;
@@ -22,6 +23,7 @@ ul{
     padding: 5px 10px;
     transition: all 0.5s;
     text-transform: uppercase;
+    transition: all 1s ease;
 }
 .navbar-a:hover {
     color: #fff;
@@ -34,6 +36,7 @@ ul{
     display: none;
     position: relative;
     background-color: black;
+    transition: all 2s ease;
 }
 .nav li:hover > ul{
     display: block;
@@ -155,17 +158,15 @@ ul{
 
 /* -----ESCUELITA-BÍBLICA----- */
 .fondo_portada{
+    width: 100%;
     text-transform: uppercase;
     font-family: cursive;
-    background-image: url(../img/fondo-portada-esculita-biblica.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
     overflow: hidden;
 }
 .tarjeta {
     position: relative;
-    width: 310px;
-    height: 350px;
+    width: 280px;
+    height: 310px;
     margin: 20px;
 }
 
@@ -176,7 +177,7 @@ ul{
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
-    transition: .5s;
+    transition: .7s;
 }
 
 .tarjeta .frontal {
@@ -188,13 +189,14 @@ ul{
     position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 .tarjeta .frontal h3 {
     position: absolute;
     bottom: 0;
     width: 100%;
+    text-transform: uppercase;
     height: 45px;
     line-height: 45px;
     color: #fff;
@@ -204,9 +206,9 @@ ul{
 
 .tarjeta .reversa {
     transform: perspective(600px) rotateY(180deg);
-    background: rgb(3, 35, 54);
+    background-image:linear-gradient(rgb(88, 176, 226), rgb(159, 88, 226));
     padding: .3em;
-    color: #f3f3f3;
+    color: #000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -215,19 +217,18 @@ ul{
 }
 
 .tarjeta .reversa h3 {
-    font-size: 1.1em;
+    font-size: 1.3em;
     margin-top: .2em;
     letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 .tarjeta .reversa p {
     font-size: 1em;
-    margin: 0;
 } 
-/* .enlace_tarjeta-escuelita{
+.enlace_tarjeta-escuelita{
     border-top: solid 1px #f3f3f3;
-    line-height: 50px;
-} */
+}
 .enlace_tarjeta-escuelita a{
     color: #f3f3f3;
 }
