--- a/css/estilos.css
+++ b/css/estilos.css
@@ -165,7 +165,7 @@ ul{
 }
 .tarjeta {
     position: relative;
-    width: 280px;
+    width: 290px;
     height: 310px;
     margin: 20px;
 }
@@ -242,8 +242,98 @@ ul{
     transform: perspective(600px) rotateY(360deg);
 }
 
+/*-----TARJETA-VIDEO-----*/
+.tarjeta_video{
+    position: relative;
+    width: 290px;
+    height: 310px;
+    margin: 20px;
+}
+.tarjeta_video-video{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
 /* ---ADOLESCENTES--- */
 .portada_adolescente{
     width: 100%;
     background-image: linear-gradient(rgb(236, 134, 39), rgb(177, 233, 45));
 }
+.portada_adolescente-texto{
+    padding: 1em;
+    margin: auto auto;
+    text-transform: uppercase;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/* -----TARJETA-LIDERES-ADOLESCENTE----- */
+.tar_lider{
+    border-radius: 2em;
+    background-color: #f3f3f3;
+}
+.contenedor_tarjeta{
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.tarjeta_lider{
+    width: 300px;
+    margin: 1em;
+    transition: all 2s;
+    border-radius: 2em;
+    box-shadow: rgba(0, 0, 0, .3);
+}
+.tarjeta_lider:hover{
+    width: 320px;
+    height: 300px;
+}
+.tarjeta_lider .cover img{
+    width: 150px;
+    display: block;
+    margin: auto;
+    position: relative;
+    top: 40px;
+    z-index: 1;
+    transition: all 3s;
+}
+.tarjeta_lider:hover .cover img{
+    top: 10px;
+}
+.tarjeta_lider .cover{
+    width: 100%;
+    height: 250px;
+    position: relative;
+    overflow: hidden;
+}
+.tarjeta_lider .img__back{
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    bottom: -80px;
+    left: 0;
+    background-size: cover;
+}
+.tarjeta_lider:nth-of-type(1) .img__back{
+    background-image: url(../img/adolescentes/fondo_tarjeta.jpg);
+}
+.card .descripcion{
+    background-color: white;
+    margin-top: -1em;
+    padding: .8em;
+}
+.card .descripcion h2{
+    margin-top: 1em;
+    text-transform: uppercase;
+}
+.mision_lider{
+    font-family: 'Courier New', Courier, monospace;
+    border: 0;
+}
+
