--- a/css/estilos.css
+++ b/css/estilos.css
@@ -526,3 +526,52 @@ ul{
                 0 6px 20px 0 rgba(0, 0, 0, .2);
 }
 
+/*FORMULARIO TEMA DE ORACION Y TESTIMONIO*/
+
+.container-form{
+    width: 100%;
+    margin: auto;
+    margin-top: 1em;
+}
+.container-form h2{
+    margin-bottom: .2em;
+    font-size: 2em;
+}
+.container-form p{
+    font-size: 1em;
+    line-height: 1.6;
+    margin-bottom: .2em;
+}
+.container-form i{
+    font-size: 1em;
+    color: rgb(39, 36, 36);
+    margin-right: .2em;
+}
+.container-form form .campo, textarea{
+    width: 100%;
+    padding: .2em .4em;
+    font-size: 1em;
+    border: 1px solid #dbdbdb;
+    margin-bottom: .8em;
+    border-radius: 3px;
+    outline: 0px;
+}
+.container-form form textarea{
+    width: 100%;
+    height: 150px;
+}
+.container-form .btn-enviar{
+    padding: .9em;
+    font-size: 1em;
+    border: none;
+    outline: 0px;
+    background: orange;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+.container-form .btn-enviar:hover{
+    background: #e39403;
+}
+
