--- a/css/estilos.css
+++ b/css/estilos.css
@@ -91,7 +91,7 @@ ul{
 }
 .color-iconbar {
     background-color: #fff;
-  }
+}
 
 .navheader_logo{
     width: 2em;
@@ -103,7 +103,6 @@ ul{
     width: 100%;
     text-transform: uppercase;
     padding: 3em 0;
-    margin-left: 0;
     background-color: rgb(43, 42, 42);
 }
 .form-textindex{
@@ -131,6 +130,7 @@ ul{
     border-bottom: rgb(92, 165, 224) solid .2em;
     transition: all 0.3s ease;
 }
+
 .style_input-submit{
     text-transform: uppercase;
     padding: .3em 2em;
@@ -158,6 +158,36 @@ ul{
     color: #fff;
 }
 
+/*-----TEMAS ORACIO Y TESTIMONIOS-----*/
+.oracion-testimonio{
+    width: 100%;
+    height: 90.9vh;
+    margin: 0;
+    background-color: rgb(43, 42, 42);
+}
+.style_input-textarea{
+    width: 20em;
+    height: 11em;
+    padding: .2em 1em;
+    margin-top: .8em;
+    background: none;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 1em;
+    border: #fff solid .1em;
+}
+.style_input-textarea:hover{
+    padding: .2em 1em;
+    margin-top: .8em;
+    background: none;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 1em;
+    border: rgb(92, 165, 224) solid .15em;
+    transition: all 0.4s ease;
+}
 
 /* -----ESCUELITA-BÍBLICA----- */
 .fondo_portada{
@@ -526,52 +556,5 @@ ul{
                 0 6px 20px 0 rgba(0, 0, 0, .2);
 }
 
-/*FORMULARIO TEMA DE ORACION Y TESTIMONIO*/
 
-.container-form{
-    width: 100%;
-    margin: auto;
-    margin-top: 1em;
-}
-.container-form h2{
-    margin-bottom: .2em;
-    font-size: 2em;
-}
-.container-form p{
-    font-size: 1em;
-    line-height: 1.6;
-    margin-bottom: .2em;
-}
-.container-form i{
-    font-size: 1em;
-    color: rgb(39, 36, 36);
-    margin-right: .2em;
-}
-.container-form form .campo, textarea{
-    width: 100%;
-    padding: .2em .4em;
-    font-size: 1em;
-    border: 1px solid #dbdbdb;
-    margin-bottom: .8em;
-    border-radius: 3px;
-    outline: 0px;
-}
-.container-form form textarea{
-    width: 100%;
-    height: 150px;
-}
-.container-form .btn-enviar{
-    padding: .9em;
-    font-size: 1em;
-    border: none;
-    outline: 0px;
-    background: orange;
-    color: white;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: all 300ms ease;
-}
-.container-form .btn-enviar:hover{
-    background: #e39403;
-}
 
