--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -7,26 +7,7 @@
     list-style: none;
     text-decoration: none;
 }
-
-
-body{
-    font-family: $font-h2;
-    background-image: linear-gradient(
-        to bottom right,
-        #f32e9ab4 0%,
-        #f969cc 20%,
-        #ffa3fe 40%,
-        #fe70988f 60%,
-        #f973d3c0 80%,
-    );
-    background-size: 200% 200%;
-    animation: movimiento 5s linear infinite alternate;
-}
-@keyframes movimiento{
-    from{
-        background-position: 0 0;
-    }
-    to{
-        background-position: 100% 100%;
-    }
+ul{
+    list-style: none;
+    transition: all 2s ease;
 }
