--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,10 @@
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
     text-decoration: none;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 ul{
     list-style: none;
