--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,130 +1,36 @@
 /*-----SEC-QUIENES SOMOS-----*/
-.sec_portada{
-  @include secc_portada
+.oracion_testimonio{
+  padding: .3em;
+  margin: 1em;
+  text-transform: uppercase;
+  backdrop-filter: blur(1rem);
+  box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, .3);
 }
-.sec_qs {
-  @include seccion_page();
-  &:hover {
-    background-color: $color-fondosech;
-  }
-}
-.enlase_whatsapp-carrusel{
+.enlace_temtes{
   text-decoration: none;
-  color: $color-fff;
-  font-size: 1rem;
-}
-.carousel-contenido{
-  font-family: $font-h2;
-  position: absolute;
-  right: 15%;
-  top: 1rem;
-  left: 15%;
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
   color: #fff;
-  text-align: center;
-}
-.carousel-contenidoh2{
-  font-size: 1.5rem;
-}
-.carousel-contenidoh3{
   font-size: 1rem;
-}
-
-
-.texto_qs {
-  display: block;
-  text-align: center;
-  padding-top: 10px;
-  h2 {
-    font-family: $font-h2;
-    font-size: 2rem;
-    margin-top: 10px;
-  }
-  p {
-    font-family: $font-p;
-    font-size: 1.1rem;
-    margin-bottom: 5px;
-  }
-}
-
-/*-----SEC-FUNDADORA-----*/
-.sec_fun {
-  @include seccion_page;
-  &:hover {
-    background-color: $color-fondosech;
-    box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, .4);
-  }
-}
-.texto_fun {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 20% 30% 30%;
-  align-content: center;
-  text-align: center;
-}
-h2 {
-  font-family: $font-h2;
-  font-size: 2rem;
-}
-p {
-  font-family: $font-p;
-  font-size: 1.1rem;
-}
-
-/*-----SEC-SERVICIOS-----*/
-.sec_ser {
-  @include seccion_page;
-    &:hover {
-      background-color: $color-fondosech;
-      box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, .4);
-    }
-    .video_ser {
-      display: grid;
-      grid-template-columns: auto;
-      grid-template-rows: auto;
-      justify-content: center;
-      align-items: center;
-    }
-    .lista_ser {
-      display: grid;
-      grid-template-columns: auto;
-      grid-template-rows: 15% 60% 15%;
-      text-transform: uppercase;
-      margin-top: 2em;
-      h2 {
-        font-family: $font-h2;
-        font-size: 2rem;
-      }
-    }
-  }
-
-/*------MAIN-SEC-SUSCRIBIR-----*/
-.sec_suscribir {
-  @include seccion_page();
-  &:hover {
-    background-color: $color-fondosech;
-    box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, .4);
-  }
-}
-
-.email_form {
-  display: flex;
-  justify-content: center;
-}
-.email_labelform {
-  width: 20em;
-  padding: 0.2em 0.5em;
-  margin: 0.5em 0.2em;
-}
-.boton_suscribir {
-  padding: 0.2em 0.5em;
-  margin: 0.5em 0.2em;
+  padding: 0 .8em;
+  background-color: rgb(40, 122, 189);
   border: none;
-  border-radius: 0.5em;
-  &:hover {
-    color: $color-fff;
-    background-color: $color-secundario;
-    box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, .4);
-  }
+  border-radius: 5em;
+}
+.enlace_temtes:hover{
+  color:  rgb(40, 122, 189);
+  background-color: #fff;
+  border: solid .2em  rgb(40, 122, 189);
+}
+
+.navbar_h1{
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  margin-left: .5em;
+}
+.color-iconbar {
+  background-color: #fff;
+}
+
+.navheader_logo{
+  width: 2em;
 }
